# aws-security-auditor

./: CHANGELOG.md  Dockerfile  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml
auditor/: __init__.py  cli.py  cloudtrail_auditor.py  ec2_auditor.py  iam_auditor.py  lambda_auditor.py  reporter.py  s3_auditor.py
tests/: test_iam.py  test_lambda.py  test_reporter.py  test_s3.py
